# foxhole-rs

./: Cargo.toml  LICENSE  README.md  changelog.md  readme.md  temp.rs
examples/: body.rs  cache.rs  chat.rs  err_handler.rs  fallback.rs  headers.rs  hello_world.rs  html.rs  https.rs  into_response.rs  layers.rs  login.rs  middleware.rs  optional_resolve.rs  resolve.rs  resolve_permission.rs  routing.rs  shuttle.rs  url_parameters.rs  url_pieces.rs  websocket.rs
examples/auth/: cert.pem  key.pem
src/: action.rs  channel.rs  connection.rs  error.rs  fallback.rs  framework.rs  get_as_slice.rs  handler.rs  http_utils.rs  layers.rs  lazy.rs  lib.rs  macros.rs  models.rs  resolve.rs  routing.rs  sequential_writer.rs  systems.rs  tasks.rs  tests.rs  thread_pool.rs  tls_connection.rs  type_cache.rs  url_decoding.rs  websocket.rs
