[package]
name = "foxhole"
version = "0.4.0"
edition = "2021"
description = "A Blazingly-fast http framework"
license = "MIT"
repository = "https://github.com/Kay-Conte/foxhole-rs/"
categories = ["web-programming::http-server", "web-programming"]
rust-version = "1.65.0"

[features]
default = ["date"]

tls = []
date = ["chrono"]
websocket = ["sha1", "base64"]

[dependencies]
http = "0.2.9"
rustls = "0.23.2"

chrono = { version = "0.4.35", optional = true }

sha1 = { version = "0.10.6", optional = true }
base64 = { version = "0.22.0", optional = true }

[dev-dependencies]
rustls-pemfile = "2"
